--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
                     <p>Score</p>
                 </div>
-                <input id="player1_name" class="player_name" type="text">
-                <p id="player1_name">player 1</p>
+                <input id="player1_name_input" class="player_name" type="text" autocomplete="off">
+                <button class="rename_btn" data-target="player1_name_input">Edit</button>
+
             </div>
             <button data-target="menu" class="modal_btn" id="menu_btn">Menu</button>
             <div id="player2">
@@ -46,8 +47,9 @@
 
                     <p>Score</p>
                 </div>
-                <input id="player2_name" class="player_name" type="text">
-                <p id="player2_name">player 2</p>
+                <input id="player2_name_input" class="player_name" type="text" autocomplete="off"><button
+                    class="rename_btn" data-target="player2_name_input">Edit</button>
+
             </div>
         </section>
 
@@ -61,6 +63,7 @@
             </div>
 
         </div>
+
         <div id="game_winner" class="modal">
 
             <div class="modal-content">
@@ -69,6 +72,7 @@
             </div>
 
         </div>
+
         <div id="game_error" class="modal">
 
             <div class="modal-content">
@@ -77,7 +81,6 @@
             </div>
 
         </div>
-
 
         <div id="menu" class="modal">
 
@@ -95,7 +98,7 @@
             <h1>Tic Tac Toe</h1>
         </section>
         <section class="display">
-            Player <span id="display_player" class="playerX">X</span>'s turn
+            <span id="display_player" class="playerX">X</span>'s turn
         </section>
 
         <!-- *********************Tic tac toe ************************* -->
